# msi2slstr

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml  setup.py  tox.ini  version.py
.github/workflows/: docs.yaml  docs.yml  model_pr.yml  pep8.yml  pypi.yml  release.yml  tests.yml
docs/source/: api.rst  conf.py  evaluation.rst  index.rst
src/msi2slstr/: __init__.py  __main__.py
src/msi2slstr/align/: __init__.py  corregistration.py  geoarray.py
src/msi2slstr/config/: __init__.py  libloader.py  libs.yaml  normalization.yaml
src/msi2slstr/data/: __init__.py  dataclasses.py  gdalutils.py  geoarray.py  modelio.py  output.py  sentinel2.py  sentinel3.py  typing.py  vrt_geolocation.py
src/msi2slstr/evaluation/: __init__.py  metrics.py  scene.py
src/msi2slstr/metadata/: abc.py  bands.py  file.py  naming.py  quality.py
src/msi2slstr/model/: __init__.py  onnx.py
src/msi2slstr/transform/: __init__.py  config.py  normalization.py  preprocessing.py  resizing.py
tests/_test_data/S2A_MSIL1C_20230908T093041_N0509_R136_T34TET_20230908T114330.SAFE/: INSPIRE.xml  MTD_MSIL1C.xml  manifest.safe
tests/_test_data/S2A_MSIL1C_20230908T093041_N0509_R136_T34TET_20230908T114330.SAFE/DATASTRIP/DS_2APS_20230908T114330_S20230908T093533/QI_DATA/: FORMAT_CORRECTNESS.xml  GENERAL_QUALITY.xml  GEOMETRIC_QUALITY.xml  RADIOMETRIC_QUALITY.xml  SENSOR_QUALITY.xml
tests/_test_data/S2A_MSIL1C_20230908T093041_N0509_R136_T34TET_20230908T114330.SAFE/GRANULE/L1C_T34TET_A042890_20230908T093533/: MTD_TL.xml
tests/_test_data/S2A_MSIL1C_20230908T093041_N0509_R136_T34TET_20230908T114330.SAFE/GRANULE/L1C_T34TET_A042890_20230908T093533/AUX_DATA/: AUX_CAMSFO  AUX_ECMWFT
tests/_test_data/S2A_MSIL1C_20230908T093041_N0509_R136_T34TET_20230908T114330.SAFE/GRANULE/L1C_T34TET_A042890_20230908T093533/QI_DATA/: FORMAT_CORRECTNESS.xml  GENERAL_QUALITY.xml  GEOMETRIC_QUALITY.xml  SENSOR_QUALITY.xml
tests/_test_data/S2A_MSIL1C_20230908T093041_N0509_R136_T34TET_20230908T114330.SAFE/HTML/: UserProduct_index.html
tests/_test_data/S3B_SL_1_RBT____20230908T093409_20230908T093709_20230909T050257_0179_083_364_2160_PS2_O_NT_004.SEN3/: xfdumanifest.xml
tests/_test_data/S3B_SL_2_LST____20230908T093409_20230908T093709_20230909T051807_0179_083_364_2160_PS2_O_NT_004.SEN3/: xfdumanifest.xml
tests/data/: test_modelio.py
tests/evaluation/: test_metrics.py  test_scene.py
tests/metadata/: test_quality.py
tests/model/: test_onnx.py
tests/transform/: test_normalization.py  test_resizing.py
