[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "msi2slstr"
authors = [
	{name="Joseph Doundoulakis", email="iosif.doundoulakis@outlook.com"}
	]
description = "TODO"
requires-python = ">=3.8"
keywords = ["TODO"]
classifiers = ["TODO"]
license = {file = "LICENSE"}
dynamic = [
"dependencies",
"version",
"readme",
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[project.scripts]
msi2slstr = "msi2slstr.__main__:main"

[project.optional-dependencies]
cu12 = [
	"nvidia-cuda-runtime-cu12 == 12.6.68",
	"nvidia-cublas-cu12 == 12.6.1.4",
	"nvidia-cudnn-cu12 == 9.4.0.58",
	"nvidia-curand-cu12 == 10.3.7.68",
	"nvidia-cufft-cu12 == 11.2.6.59"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["msi2slstr*"]

# [tool.setuptools.package-data]
# msi2slstr = ["bin/*", "lib/*"]

[tool.setuptools]
zip-safe = false

